Redirect del logo del menu de navegación a la pagina principal

--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -5,6 +5,12 @@
     box-shadow: 0 1px 3px -2px black;
     align-items: center;
 }
+#nav-logo-click:hover{
+    text-decoration: none;
+}
+#nav-logo-click{
+    text-decoration: none;
+}
 .nav-logo{
     display: flex;
     align-items: center;
