Modificación del span para dar funcion visual de click

--- a/frontend/src/Pages/CSS/LoginSignup.css
+++ b/frontend/src/Pages/CSS/LoginSignup.css
@@ -5,6 +5,10 @@
     padding-top: 100px;
 }
 
+#span-login:hover{
+    cursor: pointer;
+}
+
 .loginsignup-container{
     width: 580px;
     height: 600px;
