--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -1,5 +1,5 @@
 .hero{
-    height: 100vh;
+    /*height: 100vh;*/
     background: linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
     display: flex;
 }
@@ -10,7 +10,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 20px;
-    padding-left: 180px;
+    padding-left: 150px;
     line-height: 1.1;
 }
 
@@ -18,11 +18,12 @@
     color: #090909;
     font-size: 26px;
     font-weight: 600;
+    padding-top: 25px;
 }
 
 .hero-left p{
     color: #171717;
-    font-size: 100px;
+    font-size: 85px;
     font-weight: 700;
 }
 
@@ -57,6 +58,9 @@
     align-items: center;
     justify-content: center;
 }
+.hero-right img{
+    width: 400px;
+}
 @media(max-width:1280px){
     .hero-left{
         padding-left: 100px;
@@ -78,7 +82,10 @@
         font-size: 18px;
     }
     .hero-right img{
-        width: 500px;
+        width: 300px;
+    }
+    body {
+        background-color: #020;
     }
 }
 @media(max-width:1024px){
@@ -103,6 +110,9 @@
     .hero-right img{
         width: 400px;
     }
+    body {
+        background-color: green
+    }
 }
 @media(max-width:800px){
     .hero-left{
@@ -126,6 +136,9 @@
     .hero-right img{
         width: 300px;
     }
+    body {
+        background-color: gray;
+    }
 }
 @media(max-width:500px){
     .hero{
@@ -147,5 +160,8 @@
         width: 200px;
         height: 45px;
         font-size: 14px;
+    }
+    body{
+        background-color: red;
     }
 }
