--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -5,6 +5,9 @@
     box-shadow: 0 1px 3px -2px black;
     align-items: center;
 }
+.cart-img {
+    width: 20px;
+}
 #nav-logo-click:hover{
     text-decoration: none;
 }
@@ -23,7 +26,7 @@
 }
 .nav-logo img{
     width: 75px;
-    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .nav-menu{
@@ -56,8 +59,8 @@
     gap: 45px;
 }
 .nav-login-cart button{
-    width: 157px;
-    height: 58px;
+    width: 100px;
+    height: 30px;
     outline: none;
     border: 1px solid #7a7a7a;
     border-radius: 75px;
@@ -84,6 +87,9 @@
 }
 .nav-dropdown{
     display: none;
+}
+.cart-img{
+    width: 30px;
 }
 @media(max-width: 1280px){
     .navbar{
