--- a/frontend/src/Components/NewCollections/NewCollections.css
+++ b/frontend/src/Components/NewCollections/NewCollections.css
@@ -25,6 +25,11 @@
     margin-top: 50px;
     gap: 30px;
 }
+
+.collections .item img {
+    height: 300px;
+    object-fit: cover;
+}
 @media(max-width:1280px){
     .new-collections h1{
         font-size: 40px;
@@ -50,6 +55,9 @@
         gap: 15px;
         margin-top: 20px;
     }
+    .collections .item img {
+        height: 200px;
+    }
 }
 @media(max-width:800px){
     .new-collections{
@@ -64,11 +72,17 @@
     .collections{
         gap: 5px;
     }
+    .collections .item img {
+        height: 120px;
+    }
 }
 @media(max-width:500px){
     .collections{
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 20px;
+    }
+    .collections .item img {
+        height: 160px;
     }
 }
