--- a/frontend/src/Components/Item/Item.css
+++ b/frontend/src/Components/Item/Item.css
@@ -1,76 +1,100 @@
-.item{
-    width: 280px;
-}
-.item img{
-    width: 280px;
-}
-.item p{
-    margin: 6px 0px;
+.item {
+  width: 280px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.item-prices{
-    display: flex;
-    gap: 20px;
+.item img {
+  width: 280px;
 }
 
-.item-price-new{
-    color: #374151;
-    font-size: 18x;
-    font-weight: 600;
+.item p {
+  margin: 6px 0px;
 }
 
-.item-price-old{
-    color: #8c8c8c;
-    font-size: 18px;
-    font-weight: 500;
-    text-decoration: line-through;
+.item-prices {
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.item:hover{
-    transform: scale(1.05);
-    transition: 0.6s;
+.item-price-new {
+  color: #374151;
+  font-size: 18px;
+  font-weight: 600;
 }
-@media(max-width: 1280px){
-    .item{
-        width: 220px;
-        font-size: 14px;
-    }
-    .item img{
-        width: 220px;
-    }
-    .item-price-old{
-        font-size: 14px;
-    }
+
+.item-price-old {
+  color: #8c8c8c;
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: line-through;
 }
-@media(max-width: 1024px){
-    .item{
-        width: 170px;
-        font-size: 13px;
-    }
-    .item img{
-        width: 170px;
-    }
-    .item-price-old{
-        font-size: 13px;
-    }
+
+.item:hover {
+  transform: scale(1.05);
+  transition: 0.6s;
 }
-@media(max-width: 800px){
-    .item{
-        width: 120px;
-        font-size: 12px;
-    }
-    .item img{
-        width: 120px;
-    }
-    .item-price-old{
-        font-size: 12px;
-    }
+
+.add-to-cart-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-top: 10px; /* Ajusta el margen según sea necesario */
 }
-@media(max-width: 500px){
-    .item{
-        width: 160px;
-    }
-    .item img{
-        width: 160px;
-    }
+
+.add-to-cart-btn img {
+  width: 24px;
+  height: 24px;
+}
+
+@media(max-width: 1280px) {
+  .item {
+    width: 220px;
+    font-size: 14px;
+  }
+  .item img {
+    width: 220px;
+  }
+  .item-price-old {
+    font-size: 14px;
+  }
+}
+
+@media(max-width: 1024px) {
+  .item {
+    width: 170px;
+    font-size: 13px;
+  }
+  .item img {
+    width: 170px;
+  }
+  .item-price-old {
+    font-size: 13px;
+  }
+}
+
+@media(max-width: 800px) {
+  .item {
+    width: 120px;
+    font-size: 12px;
+  }
+  .item img {
+    width: 120px;
+  }
+  .item-price-old {
+    font-size: 12px;
+  }
+}
+
+@media(max-width: 500px) {
+  .item {
+    width: 160px;
+  }
+  .item img {
+    width: 160px;
+  }
 }
