--- a/frontend/src/Components/Offers/Offers.css
+++ b/frontend/src/Components/Offers/Offers.css
@@ -51,6 +51,7 @@
     .offers{
         padding: 0px 80px;
         margin-bottom: 120px;
+        padding-top: 90px;
     }
     .offers-left h1{
         font-size: 40px;
