--- a/admin/src/Components/Navbar/Navbar.css
+++ b/admin/src/Components/Navbar/Navbar.css
@@ -1,26 +1,44 @@
 .navbar {
     display: flex;
     align-items: center;
-    justify-content:space-between;
+    justify-content: flex-start; 
     padding: 15px 60px;
     box-shadow: 0 1px 3px -2px #000;
     margin-bottom: 1px;
     background: white;
+    gap: 15px; 
 }
+
+.nav-home {
+    display: flex;
+    align-items: center;
+    text-decoration: none; 
+}
+
 .nav-logo {
-    width :200px;
+    width: 100px;
 }
-.nav-profile {
-    width: 75px;
+
+.nav-title {
+    font-size: 25px; 
+    font-weight: bold;
+    color: #4169E1; 
+    text-align: left; 
+    flex: none; 
+    margin-left: 20px; 
 }
-@media(max-width:800px){
-    .navbar{
+
+/* Responsive */
+@media (max-width: 800px) {
+    .navbar {
         padding: 15px 30px;
     }
-    .nav-logo{
-        width: 150px;
+
+    .nav-logo {
+        width: 80px;
     }
-    .nav-profile{
-        width: 60px;
+
+    .nav-title {
+        font-size: 20px; 
     }
 }
