--- a/frontend/src/Components/Popular/Popular.css
+++ b/frontend/src/Components/Popular/Popular.css
@@ -59,8 +59,9 @@
 }
 @media(max-width:800px){
     .popular{
-        height: 50vh;
+        height: 100%;
         gap: 6px;
+        margin-bottom: 50px;
     }
     .popular h1{
         font-size: 20px;
@@ -70,6 +71,8 @@
     }
     .popular-item{
         gap: 5px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
 @media(max-width:500px){
