--- a/frontend/src/Components/NewCollections/NewCollections.css
+++ b/frontend/src/Components/NewCollections/NewCollections.css
@@ -26,10 +26,6 @@
     gap: 30px;
 }
 
-.collections .item img {
-    height: 300px;
-    object-fit: cover;
-}
 @media(max-width:1280px){
     .new-collections h1{
         font-size: 40px;
@@ -37,10 +33,6 @@
     .new-collections hr{
         width: 160px;
         height: 4px;
-    }
-    .collections{
-        gap: 20px;
-        margin-top: 30px;
     }
 }
 @media(max-width:1024px){
@@ -55,9 +47,6 @@
         gap: 15px;
         margin-top: 20px;
     }
-    .collections .item img {
-        height: 200px;
-    }
 }
 @media(max-width:800px){
     .new-collections{
@@ -71,9 +60,8 @@
     }
     .collections{
         gap: 5px;
-    }
-    .collections .item img {
-        height: 120px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
 @media(max-width:500px){
@@ -81,8 +69,5 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 20px;
-    }
-    .collections .item img {
-        height: 160px;
     }
 }
