--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    /* gap: 50px; */
+    padding: 50px 0px;
 }
 
 .footer-logo{
