--- a/frontend/src/Pages/CSS/LoginSignup.css
+++ b/frontend/src/Pages/CSS/LoginSignup.css
@@ -1,8 +1,9 @@
 .loginsignup{
     width: 100%;
-    height: 80vh;
+    /* height: 80vh; */
     background: #fce3fe;
     padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 #span-login:hover{
@@ -15,6 +16,7 @@
     background: white;
     margin: auto;
     padding: 40px 60px;
+    border-radius: 11px;
 }
 
 .loginsignup-container h1{
