--- a/frontend/src/Pages/CSS/UserProfile.css
+++ b/frontend/src/Pages/CSS/UserProfile.css
@@ -1,10 +1,11 @@
 .user-profile {
-  width: 80%;
-  margin: auto;
+  width: 100%;
   padding: 20px;
-  background: #f9f9f9;
+  background: #ffe4e147;
   border-radius: 8px;
-  margin: 1% 9%;
+  margin-top: 15px;
+  display: grid;
+  justify-content: center;
 }
 
 .user-info label {
