--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -29,6 +29,7 @@
     gap: 50px;
     color: #252525;
     font-size: 20px;
+    margin-top: 28px;
 }
 
 .footer-links li{
@@ -38,13 +39,12 @@
 .footer-social-icon{
     display: flex;
     gap: 20px;
+    margin-top: 15px;
 }
 
 .footer-icons-container{
     padding: 10px;
     padding-bottom: 6px;
-    background: #fbfbfb;
-    border: 1px solid #ebebeb;
 }
 
 .footer-copyright{
