--- a/admin/src/Pages/Admin/Admin.css
+++ b/admin/src/Pages/Admin/Admin.css
@@ -72,6 +72,12 @@
 
     .admin-welcome {
         width: 90%; 
-        padding: 25px;
+        padding: 40px;
+    }
+}
+@media (max-width: 500px) {
+    .admin {
+        flex-direction: row;
+        align-items: flex-start;
     }
 }
