--- a/admin/src/Components/Sidebar/Sidebar.css
+++ b/admin/src/Components/Sidebar/Sidebar.css
@@ -20,6 +20,8 @@
     gap: 20px;
     cursor: pointer;
     justify-content: initial;
+    width: 150px;
+    height: 50px;
 }
 .sidebar-item img {
     width: 30px;
@@ -28,7 +30,7 @@
 
 @media (max-width: 800px) {
     .sidebar {
-        padding: 30px 0;
+        padding: 20px 0;
         flex-direction: row;
         width: 100%;
         max-width: none;
@@ -36,7 +38,43 @@
         justify-content: center;
     }
 
-    .sidebar-item {
-        margin: 0; 
+    .sidebar-item{
+        width: 125px;
+        height: 50px;
+        gap: 9px
     }
+
+}
+
+@media(max-width: 500px){
+    .sidebar {
+        padding: 15px 0;
+        flex-direction: column;
+        width: 32%;
+}
+.sidebar-item{
+    width: 61%;
+    height: 50px
+}
+.sidebar-item img {
+    width: 20px;
+    height: 25px
+}
+p {
+    font-size: 13px;
+}
+.admin-welcome h1 {
+    font-size: 17px;
+}
+.admin-welcome p {
+    font-size: 14px;
+    color: #555;
+    margin-bottom: 10px;
+}
+.admin-content{
+    display: flex;
+    align-items: flex-start;
+    width: 350px;
+
+}
 }
