--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -30,10 +30,6 @@
     align-items: center;
 }
 
-.dropdown-icon {
-    margin-left: 0.9rem;
-}
-
 .dropdown-menu {
     position: absolute;
     top: 100%;
@@ -194,7 +190,7 @@
 .cart-img {
     width: 30px;
 }
-.nav-login-cart button {
+.nav-login-cart .dropdown-toggle {
     width: 80px;
     height: 33px;
     font-size: 16px;
@@ -226,7 +222,7 @@
         gap: 30px;
     }
 
-    .nav-login-cart button {
+    .nav-login-cart .dropdown-toggle {
         width: 80px;
         height: 33px;
         font-size: 16px;
