--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -1,53 +1,62 @@
-.footer{
+.footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* gap: 50px; */
     padding: 50px 0px;
 }
 
-.footer-logo{
+.footer-logo {
     display: flex;
     align-items: center;
     gap: 20px;
 }
 
-.footer-logo p{
+.footer-logo p {
     color: #383838;
     font-size: 46px;
     font-weight: 700;
 }
 
-.footer-logo img{
+.footer-logo img {
     width: 65px;
 }
 
-.footer-links{
+.footer-links {
     display: flex;
     list-style: none;
     gap: 50px;
-    color: #252525;
     font-size: 20px;
     margin-top: 28px;
 }
 
-.footer-links li{
+/* Estilo para los enlaces */
+.footer-links li a {
+    text-decoration: none; 
+    color: #383838; 
+    transition: color 0.3s ease;
+}
+
+.footer-links li a:hover {
+    color: #ccc; 
+}
+
+.footer-links li {
     cursor: pointer;
 }
 
-.footer-social-icon{
+.footer-social-icon {
     display: flex;
     gap: 20px;
     margin-top: 15px;
 }
 
-.footer-icons-container{
+.footer-icons-container {
     padding: 10px;
     padding-bottom: 6px;
 }
 
-.footer-copyright{
+.footer-copyright {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,36 +67,37 @@
     font-size: 20px;
 }
 
-.footer-copyright hr{
+.footer-copyright hr {
     width: 80%;
     border: none;
     border-radius: 10px;
     height: 3px;
     background: #c7c7c7;
 }
-@media(max-width:800px){
-    .footer{
+
+/* Responsivo */
+@media (max-width: 800px) {
+    .footer {
         gap: 20px;
     }
-    .footer-logo{
-        gap:10px;
+    .footer-logo {
+        gap: 10px;
         align-items: end;
     }
-    .footer-logo img{
+    .footer-logo img {
         width: 40px;
     }
-    .footer-logo p{
+    .footer-logo p {
         font-size: 25px;
     }
-    .footer-links{
+    .footer-links {
         font-size: 14px;
         gap: 10px;
     }
-    .footer-social-icon img{
+    .footer-social-icon img {
         width: 22px;
     }
-    .footer-copyright{
+    .footer-copyright {
         font-size: 13px;
     }
-
 }
