--- a/frontend/src/Components/CommentsBox/CommentsBox.css
+++ b/frontend/src/Components/CommentsBox/CommentsBox.css
@@ -52,12 +52,14 @@
   border: 1px solid #e0e0e0;
   background-color: #f9f9f9;
   margin: 0 5px;
+  color: black;
 }
 
 .commentsbox-nav-box.active {
   font-weight: bold;
   border-bottom: 2px solid #000;
   background-color: #fff;
+  color: black;
 }
 
 .commentsbox-content {
