--- a/frontend/src/Components/Offers/Offers.css
+++ b/frontend/src/Components/Offers/Offers.css
@@ -1,138 +1,153 @@
-.offers{
+.offers {
     width: 65%;
-    height: 60vh;
+    height: 40vh;
     display: flex;
     margin: auto;
     padding: 0px 140px;
-    margin-bottom: 150px;
+    margin-bottom: 155px;
     background: linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
-    margin-top: 45px;
+    margin-top: 155px; 
 }
 
-.offers-left{
+.offers-left {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.offers-left h1{
+.offers-left h1 {
     color: #171717;
     font-size: 70px;
     font-weight: 600;
+    margin-bottom: 25px;
 }
 
-.offers-left p{
+.offers-left p {
     color: #171717;
     font-size: 22px;
     font-weight: 600;
 }
 
-.offers-left button{
-    width: 282px;
-    height: 70px;
-    border-radius: 35px;
-    background-color: #ff4141;
-    border: none;
-    color: white;
-    font-size: 22px;
-    font-weight: 500;
-    margin-top: 30px;
-    cursor: pointer;
-}
-
-.offers-right{
+.offers-right {
     flex: 1;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     padding-top: 50px;
 }
-@media(max-width:1280px){
-    .offers{
+
+.offers-right img {
+    max-width: 100%; /* Evita que la imagen se desborde */
+    height: auto;
+}
+
+/* Ajustes para pantallas medianas */
+@media (max-width: 1280px) {
+    .offers {
         padding: 0px 80px;
         margin-bottom: 120px;
         padding-top: 90px;
     }
-    .offers-left h1{
+    .offers-left h1 {
         font-size: 40px;
     }
-    .offers-left p{
+    .offers-left p {
         font-size: 18px;
     }
-    .offers-right img{
+    .offers-right img {
         width: 300px;
     }
-    .offers-left button{
+    .offers-left button {
         width: 220px;
         height: 50px;
         font-size: 18px;
     }
-    .offers-right{
+    .offers-right {
         padding-top: 30px;
     }
 }
-@media(max-width:1024px){
-    .offers{
+
+/* Ajustes para tablets */
+@media (max-width: 1024px) {
+    .offers {
         padding: 0px 60px;
         margin-bottom: 80px;
         height: 40vh;
     }
-    .offers-left h1{
+    .offers-left h1 {
         font-size: 30px;
     }
-    .offers-left p{
+    .offers-left p {
         font-size: 16px;
     }
-    .offers-right img{
+    .offers-right img {
         width: 200px;
     }
-    .offers-left button{
+    .offers-left button {
         width: 160px;
         height: 40px;
         font-size: 16px;
     }
-    .offers-right{
+    .offers-right {
         padding-top: 10px;
     }
 }
-@media(max-width:800px){
-    .offers{
+
+/* Ajustes para móviles */
+@media (max-width: 800px) {
+    .offers {
+        margin-top: 50px; 
         margin-bottom: 60px;
+        height: auto; 
     }
-    .offers-left h1{
+    .offers-left h1 {
         font-size: 22px;
     }
-    .offers-left p{
+    .offers-left p {
         font-size: 13px;
     }
-    .offers-right img{
+    .offers-right img {
         width: 180px;
     }
-    .offers-left button{
+    .offers-left button {
         width: 140px;
         height: 30px;
         font-size: 12px;
     }
 }
-@media(max-width:500px){
-    .offers{
-        height: 25vh;
+
+/* Ajustes para móviles pequeños */
+@media (max-width: 500px) {
+    .offers {
+        height: auto;
+        margin-top: 30px; 
         margin-bottom: 50px;
     }
-    .offers-left h1{
+    .offers-left h1 {
         font-size: 16px;
     }
-    .offers-left p{
+    .offers-left p {
         font-size: 10px;
     }
-    .offers-right img{
+    .offers-right img {
         width: 120px;
     }
-    .offers-left button{
+    .offers-left button {
         width: 120px;
         height: 25px;
         font-size: 10px;
         margin-top: 12px;
+    }
+}
+
+@media (min-width: 1600px) {
+    .offers {
+        width: 60%;
+        padding: 0px 160px;
+        height: 45vh;
+    }
+    .offers-right img {
+        max-width: 450px; /* Evita que crezca demasiado */
     }
 }
