--- a/frontend/src/Components/NewsLetter/NewsLetter.css
+++ b/frontend/src/Components/NewsLetter/NewsLetter.css
@@ -117,6 +117,9 @@
     .newsletter input {
         font-size: 14px;
     }
+    .newsletter form{
+        width: 75%;
+    }
     .newsletter form button {
         width: 120px;
         height: 50px;
